[tool.poetry]
name = "ai-builders-24"
version = "0.1.0"
description = ""
authors = ["vintro <vince@plasticlabs.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
honcho-ai = "^0.0.13"
mirascope = {extras = ["anthropic"], version = "^0.18.1"}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
